--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,49 +1,23 @@
-#----------------------------------------------------------------------------
-# Setup the project
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-project(gdml)
+project(gdmlview)
 
-#----------------------------------------------------------------------------
-# Find Geant4 package, activating all available UI and Vis drivers by default
-# You can set WITH_GEANT4_UIVIS to OFF via the command line or ccexampleN02make/cmake-gui
-# to build a batch mode only executable
-#
-option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
-if(WITH_GEANT4_UIVIS)
-  find_package(Geant4 REQUIRED ui_all vis_all)
-else()
-  find_package(Geant4 REQUIRED)
-endif()
+find_package(Geant4 REQUIRED ui_all vis_all)
 
-#----------------------------------------------------------------------------
-# Setup Geant4 include directories and compile definitions
-#
 include(${Geant4_USE_FILE})
 
-#----------------------------------------------------------------------------
-# Locate sources and headers for this project
-#
 include_directories(${PROJECT_SOURCE_DIR}/include 
                     ${Geant4_INCLUDE_DIR})
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 
-#----------------------------------------------------------------------------
-# Add the executable, and link it to the Geant4 libraries
-#
-add_executable(gdml gdml.cc ${sources} ${headers})
-target_link_libraries(gdml ${Geant4_LIBRARIES} )
+add_executable(gdmlview gdmlview.cc ${sources} ${headers})
+target_link_libraries(gdmlview ${Geant4_LIBRARIES} )
 
-#----------------------------------------------------------------------------
-# Copy all scripts to the build directory, i.e. the directory in which we
-# build N02. This is so that we can run the executable directly because it
-# relies on these scripts being in the current working directory.
-#
-set(N02_SCRIPTS
+set(SCRIPTS
     vis.mac
   )
 
-foreach(_script ${N02_SCRIPTS})
+foreach(_script ${SCRIPTS})
   configure_file(
     ${PROJECT_SOURCE_DIR}/${_script}
     ${PROJECT_BINARY_DIR}/${_script}
@@ -51,8 +25,5 @@ foreach(_script ${N02_SCRIPTS})
     )
 endforeach()
 
-#----------------------------------------------------------------------------
-# Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
-#
-install(TARGETS gdml DESTINATION bin)
+install(TARGETS gdmlview DESTINATION bin)
 
